@@ -1,3 +1,11 @@
+Sun Aug 29 23:54:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rdoc/parser/ruby.rb (RDoc#parse_call_parameters): don't
+	  include assignment.  [Bug #3759], [ruby-dev:42154]
+
+	* lib/rdoc/parser/ruby.rb (RDoc#parse_class): ignore non-constant
+	  name signleton class.  [Bug #3759], [ruby-dev:42154]
+
 Sat Sep 25 22:48:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (LIBRUBY_DLDFLAGS): fix quoting.
